@@ -3,25 +3,25 @@ Hash: SHA256
 
 AUX zsdx-1.7.1-paths.patch 1097 SHA256 4e616f527e25e629b6a71ba60013af7aff502fb1976aad92ea945d495f363657 SHA512 a54fc82849829cf0dbd1196f207bea3d2e981983be549330916b57ffc3c746fa76cf46a1425011d50f26239758d32096cf67fe819f283efc20095534fba9c79f WHIRLPOOL d5586a450a6782ff0194c0f52e1a86a74e034419e62ca09f042d422a387f514da699c04019ca204bd52b939717ea8f66bbb661dbd2bf1cbfdf9065887b19337d
 DIST zsdx-1.7.1.tar.gz 23006478 SHA256 772c7275989d37487e5eb11807ec8f1e8fb679f611efc203f9082aabc41c0ee2 SHA512 b1c02c3c947cb4e09cf082b0016a37c740a7eceefaa0e68511bbc51934d21b7fae9595d88318d529c95bc71a075435dd24cbce0cd548141201357fba16a5b800 WHIRLPOOL ee29bc2d9aa331331700aecb6ce795417c79a1268533e5bcda91b5d726622c7c41a4829613d0a061c8a60a0b1388aa5fed012995301112ebb8226c50e6b17a11
-EBUILD zsdx-1.7.1.ebuild 1387 SHA256 79a6801cfaed16e91803e6b2acc6d2e26e92f20f6138a87ef2d018b7daf6e184 SHA512 4318e80ca660c6d0992c61cfece1ca1f7998d7817610cc28e580093b6fe945d0edde833101d99d01e11308ed9317c1f8879c16edc36e93853c418c9e326c7ed2 WHIRLPOOL b26ca08633cc5b79cccd53613f1042b0e0c36e620eac0d0950d26958095ea3b4332a45e0b2c4bb80307e95a500e7954e018680ad324e44bf7bbebc214b25aed4
-MISC ChangeLog 471 SHA256 11b8427e2db781463aad6a879ed3f7aa5a08d9aad20c2cc60f9317b1234d6e6f SHA512 d00df92395be3828bf7b5024de4ce1da2fd2b3267114fd7c59836a6ccc35de64e94eb8593258e2d3891af7ba00720df002f0c7f3fd12b8d54fcc7f66dfb76f28 WHIRLPOOL f7f748548aab1673d94ae40135507cf0ea5ca4355ee9a45ee948e4a1999d99b0d3ac48d3bb32970ff6d0346cd1f9542845e567be6ffedfbcc45fd538b9badb70
+EBUILD zsdx-1.7.1.ebuild 1420 SHA256 b80298ff1aa71119b06398a98dd4910a59afb50f0f02e5ef61eb47940a9f48e0 SHA512 50543572bf2c663b44f00780110b971445d7dd179767473f84f6ad98e3272e50040460149df615296b0628080a685436daf683abec8e1714a83999b3c3d136bb WHIRLPOOL 0bd644a4b5706c1a63f47a34ba149eea06d1bc6ce5f29aad01ff8991396fe8654d3280c680491b5aee150abe06ae1d0850aa7a29e855e42cf94ff0d43c85a013
+MISC ChangeLog 576 SHA256 86b8da465ddb75592e564a61bb6174028b28782ef7571a091052b2519ede65e2 SHA512 11e01ae067a6506d6bfcba7033bfee3128b095515faf702803a799b755e1412420316b1de93e0f84228c8d9921069613fca47bb6daa642b887155800082541ea WHIRLPOOL d258978648a40471e324ea3bed335f8ba4e851f7cadfdfdcf57bd7c8a76e1d8323bb340c2867ad487d16008cb1515aa7f8b8e09b96aee3a61d4cb6c7c74eede2
 MISC metadata.xml 334 SHA256 299f2b73db2f0ad3e99b5b88a100fc43a11576aeafea6186d54e974b3eb5adf0 SHA512 49fff9eae67ce33cfd6a30430326bd4deed838b4cf0857e9bf2596995cedbe2b03878d42790e847398ebace693a52c5e9ed30a4d16a2967f272374f4454e25af WHIRLPOOL 5944b12284c12e86531901f33a7f166480d793710988b65a09288bfde2f4ea58c662ccf71275268b7c792747afaf9c58afac03e1a27c3a91a67ff6fadb033041
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTSuU9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTSvMLXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAg7qEP/2HwEGruAl9CKbAGe8gthLUw
-sz1QwpiVemDjG6zdgRVy2goFYfDCqRrCRgrKELnwCDqKhQomocaOcH0OYygrh8Z/
-BJkOCEaKoQlrAGCuRukIbW5RchLYNu18ev8SnvyDXeYzMQ2MCSf32mygw1OCwUqx
-KEgv8+ZT6PU5AeYXf5l2Eum4epphJ6n5obGyRUqUim3ftxQXfVf3BvSwO1m/4b7c
-QC5ypvF3U4OhhXbsgzLzuYrh/PwQqlXZUFUKDDQH8azZ3evZK34NhSyuyeAWCT9b
-3RVILQmkRGb5PPlMg+7kSuzVKjZZODsp0IiVlUe8efQ1o2Mw9gOr/A4i3n+SQxUS
-WVNAhoJOd6kZSzFLcmlYM7F/oWK3LuolBuYMkWPckhcspHGh2LdfXFmWA5Hfoyqy
-XaMKtFOeM7rQIQ9FSh5pSON9DHJBw82ziTGiRWmOboMjP0M8d5RmIzjVKzfv3fJY
-Y/mQp/GPebsY9gL0VwPW+MzGOZ9E7BUKS4RrRcab053wWf8jYezyV4DjXOYJYBEu
-PxbMUnBZMdBhQQZuwhMZAbjotJw3CZPr0MwpsydTFGXBeXW2M91WZZiw+Ts4IxYV
-dkBZSjXcCKSBjwsfHOQvR8mCiYACAUV2czlPymdA22GoltvmRjyDM11PzCzjXK7v
-PzmBsBfgSM0QqX2BCDn1
-=ahcE
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgQBEQAKjhK9UjKQdzAA74VBXRSHxT
+jUz9VMyOk0CRTqDbgmP8YIx/ssMcqyIuJM/1JydXnli77+CqrDYc0dE27dpllB6h
+vc6/xHfrWhDF+zPr0OC/F5PWdv8zmRI10FnyLlIfyRJzm/SxdHfd03x601hq85jZ
+b80+DpBIsoMigF9I01ec0uww3K4jCRt6GCJ5FXY/USu0u/UOaYmFXZknW7gEY7ve
+Ek/RbSBdKCm83k6qydTT5jPC4NlqDmJ+FZLuqsb97u6OV1HDsLV+Zh9aLtKwwNpx
+iQYup/Fyq3Bcl7jRYtf25cuQKTTulHDY7bVS9RIJiXEOK1rQwaw/Yq+57y5btbGH
+fxG2mtdQyaw7qOGPux6WmU/C3pnxHwOTQNPQr0ekVVcOJDEcOFHKiH6e2WPimoZ1
+i7/p+64hKlreHBkAuZ3TeKghI9mSySpnl5Qf+/oUJuSOYBrexcUBxAbsd7HOIFVi
+kiie/tulI55iKpkFRFwGXUg8glJFsmt7ddAoX6yh+aucc8ermQNWHK626UWzTvNo
+dIKCM0hUaVFMcQeDfpDhi86yW/MyYDj0E8Ox8FqiVEbeeRkYZj8qnu4liBg6shwG
+Zc//+Mn9GdkhXAl91foFIg+tqbSqEWUai91ynN3H3p1Vtway0hXlm2R5rMM/CwfG
+W6JPZrMMJESnXyjmF49l
+=k8QE
 -----END PGP SIGNATURE-----
