@@ -3,25 +3,25 @@ Hash: SHA256
 
 AUX zsxd-1.7.1-paths.patch 1115 SHA256 29cd2b18c9dafb3c022ede9bbeccb36421d5d2136e685169a9d9853918bdd361 SHA512 3add02a81f19db206b68060dac9e428d219a16b8617c813c81609d4b2deb8f5bf244b7e292cdb63ff0f1b8af85664e5e00649967a281ee31295fa77c5dc997b7 WHIRLPOOL a2a699d35216d11fd9d63241d46a72542c4dba87fd696ed55c56e7587c21a88afb04ea6f916f3081c3d762ad751db6c3bec5233f44b19b4c63a81311684ceb22
 DIST zsxd-1.7.1.tar.gz 3696807 SHA256 ea5557fcc028b39758e63b1c26f71dead3a743f15f74b2391eb618d210f777dc SHA512 8edea69ad1599b0bcccb3db4f030613dd04cdd0575722347869e799536639face6082fe51af5975a15a215fdb775978c654b9d46821c261c242573f6213f818d WHIRLPOOL a83705bcfd7cfe39abff02f8c5fb5241b07c7272e8c5643f7600b9f65e3993ceb83524f26da81f12a53d5800a5292eb75f5a9327745b6a63b4a8f392f80b3135
-EBUILD zsxd-1.7.1.ebuild 1357 SHA256 f53220e8247301e1b8cc8cf4672f6af39fbe1b859d57e0f7f1f7b49457a6d9df SHA512 f53d13665e2169861211c39387204f0f344de7e55faa1f8324d1370220f1a91c6297d4dee6604dd02dbfee7f1094cd4306e12bcdf5cb38a7e13504963777f96a WHIRLPOOL d5c82211730d7267c95fba74ae534163705f02b709e90e91a2cc3ff222c35130cbafafa0a1753abe269e0b65fae1d482de520ed8bba9d544c30290e318223672
-MISC ChangeLog 471 SHA256 2d7fe44ceea7044fd6e4430dc46169b9d09573034ae56e28d52cc77bd18c3abe SHA512 9aa2be26fe87263e86f934be508f6010f6955c1b79146bfd8417680dcb0525644cb19b9eaf80f4c221a7262ec8409f425db29870ca36a65da8f2a449a4e2a68e WHIRLPOOL fe52256cbe22c801fd752784fcbca71a075dbe6245e91f0e7eaf053ad056db976db60428267bdd8d6e5305992dde620b386bbf5d20372be58b7a45897098d91f
+EBUILD zsxd-1.7.1.ebuild 1390 SHA256 d9a30faedffc6326579b6dc0f712fd6fbea220e67f26c4a2957df0411e5808cf SHA512 d15c7d0047c6521b93684e73e9b0353ee525096741c8179bad0b14bf5603be18d2cef342fc66c983129edd6a7c94e854479a72da439627e47e5d5299cfb94c4d WHIRLPOOL e8c09cee911a58e6bd9bc44e22522431b4657494e3968b883c8551970bacadbc2f23533b66b0405286e02fd7c8e085e64a9fc6ef46e2d31de3265b7f178948f8
+MISC ChangeLog 576 SHA256 a9834c9e634ccf4e9372de337b7c91ce3749507fd384a97d18ea1eac5f681574 SHA512 69c1fe663cc66fdc575a3ef894bac802f6fd7e37dcf96b005baabe3df4fa9d1228d38c71aa0783fd31c426ec20786b710a170b56723b28750772fbe7b1a968bd WHIRLPOOL 1add291fd3b1f8df87f37c682695a39ad20a982d9a81e6a689e82bbcc953a932dc7d2762a04b4a90f72932fe8dcd212ff796da25ce37fe6ca1a23e3cba0933a5
 MISC metadata.xml 334 SHA256 4180a3eb78f8b30241cbe209090bfba589ce28c209fa790c4361509b7987fde9 SHA512 9d5b7d5b02e197ee3d99ca763053b844b6a79ddfbcb226da244c69b71ebdc7c02383156558a1adcfc75d79fc118f25690bde06f5809a5173201d6e073f8a8563 WHIRLPOOL 51c27c420ea4d57b76ba8aa491af2f55216fa9dc90c2f7e6dd75c432f56495917a3ec5933cb7aa47546e977957bee116a4393b1f03361e3241e1323698f624c4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTSuVUXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTSvMzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAg9IAP/1Gg3BWaXlMzmb0kG6AzRhy1
-WQcigMmqEdpdfTOL81xIBoWI6QyAbVkXc1lOa0lcBXg31WDa6M0m3KVGkURBNTnV
-+YTwYFxLBI7VuYtJtHtBzfiUS/z+Jm9XIy57TWJunj5Ajve/+7NnLdYlVnd331OV
-GA4hhWrsE1UtgTNIk/kIhywLpswVhily5EN1ylDiTqn2CsR5PXa2e58ULcF/NDoO
-XxnFZYJ1bOCANBtki3WOCOs0sFmKxNSUf/NyBLGLV5TMg7cIgeSO/Ah067tkuFcc
-rgBeiI6u5mNuyD8GczprI0RflzY+TfoMBHOeUXyOVTMxvRgvtbEXm9+D8Xxpe+35
-oZ2KG6yFaO5/HUNsb4KHFP0xoR4D4T0Ogv2PGOwM0OUWSmrIv8WdVwg3A/v/WRkd
-o4+2ictF4nycxy7Hr5lVf8c0oxjlkSJhG941TZFTt5xRAu3EpBj49N+wPo2MOfLk
-ikiny86HXj9DJD86MKRHAjXqrCnHQAqM+PHIOTUTm0Y9ij6EyYbRsx/GwMYt5Xp4
-fzkEyKXsz388oyAbMuoK6QdhzGq+gdaOLIb/087RXM/mWn8WuYOvyzbCIEXAuqib
-BgVdoMbMtCzxxD2xp4wAJkuBWuS+6EbNDkb5vvdIjXvUUDGJZd5OZ1pSOvcQNcn7
-AoDne3+lPZ7/6ANwxxr9
-=z7RN
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgOT4QAOli2SFr7kuqtHBlT+EkjipI
+nuz7PAZM0DFe/0S9OqvBbPB4K0RGd6kFIKEIqjHz/ZIl30ffigQhElJ3tp8Vvmvh
+OYgtiCOok5UPuL4Ao8CKWhuuEoEAxK9UGY/inCQ27qRsQUrcGLVuWKLU6a3zAcaT
+LdEMlYIPG3vGoL1Dxaa+UkkTExsGksgiqIQwCaa2IH9rX7Gs86EJ9f9xdWyOOjN1
+BAefdnBfeIRwRhuOnQMsbXhBuJuMvdOjRaYkRxbuSWZD/aiDNtd9RA3xKe6HVtGc
+C+vrvRyDqV6IVAcI48jwBLNBH97U1NN5/H/PceU6XocRsirfrauYSmm+DQnK/Nnd
+tEdQBKHSl06nsALSAQKBFgc3p0yjTytZRe93QkKrJcQTQRR0heXgLOxh7QeIKdar
+RI3BpKXZmn7fIQhBAaC3VJUlM+BzyiitY0aXqy+em891lNFVyuQz0aXaWO4jWhvr
+lqzq0eFJK1FRMGpNQ1iBaTUBxSYJKKL5RtUYgNQgPxdBihPNBjEtpyNoD1i/lk0N
+LgNr0J/We19QxgiNLHjEFxPy37kA1m5yHrb9azwvy8/oCVtFsYYvDoXhBU1k3FRA
+KTefHG7rwF+OGZtS30io+jtkyg3SzY3ofJa59FDUa8zwr1F8FNtEnlQ+3wLixz08
+hHmISL50kNOf3do4ayNq
+=QhsP
 -----END PGP SIGNATURE-----
