@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsxd/zsxd-1.7.1.ebuild,v 1.2 2014/04/13 19:28:20 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsxd/zsxd-1.7.1.ebuild,v 1.3 2014/04/13 20:27:31 hasufell Exp $
 
 EAPI=5
 
@@ -10,7 +10,7 @@ DESCRIPTION="A free 2D Zelda fangame parody"
 HOMEPAGE="http://www.solarus-games.org/"
 SRC_URI="http://www.zelda-solarus.com/downloads/${PN}/${P}.tar.gz"
 
-LICENSE="GPL-3"
+LICENSE="all-rights-reserved CC-BY-SA-3.0 GPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
