@@ -4,10 +4,10 @@ DESCRIPTION=A free 2D Zelda fangame
 EAPI=5
 HOMEPAGE=http://www.solarus-games.org/
 KEYWORDS=~amd64 ~x86
-LICENSE=GPL-3
+LICENSE=all-rights-reserved CC-BY-SA-3.0 GPL-3
 RDEPEND=games-engines/solarus games-misc/games-envd
 RESTRICT=mirror
 SLOT=0
 SRC_URI=http://www.zelda-solarus.com/downloads/zsdx/zsdx-1.7.1.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cmake-utils	7798d4361fbdd043014e635a1753e076	eutils	af81d52c25ec93fbdff71e0efb0de7b7	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	games	016d5de1968de77e56a90938ed6e5aba	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=0a7de774b124dbef5474dca40558590f
+_md5_=1607295bef65c185e8475e02fc5e1dd9
