@@ -1,6 +1,9 @@
 # ChangeLog for games-rpg/zsdx
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsdx/ChangeLog,v 1.2 2014/04/13 19:27:54 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/zsdx/ChangeLog,v 1.3 2014/04/13 20:26:48 hasufell Exp $
+
+  13 Apr 2014; Julian Ospald <hasufell@gentoo.org> zsdx-1.7.1.ebuild:
+  update license info wrt #507412
 
   13 Apr 2014; Julian Ospald <hasufell@gentoo.org> zsdx-1.7.1.ebuild:
   set RESTRICT=mirror wrt #507412
